force-app/main/default/objects/Factura__c/fields/Monto_Sin_Impuesto__c.field-meta.xml
<CustomField>
    <fullName>Monto_Sin_Impuesto__c</fullName>
    <label>Monto Sin Impuesto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>