force-app/main/default/objects/Factura__c/fields/Monto_Total__c.field-meta.xml
<CustomField>
    <fullName>Monto_Total__c</fullName>
    <label>Monto Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>