force-app/main/default/objects/Factura__c/fields/Numero_de_Factura__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Factura__c</fullName>
    <displayFormat>FAC-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Numero de Factura</label>
    <type>AutoNumber</type>
</CustomField>