force-app/main/default/objects/Factura__c/fields/Reporte_de_Gastos__c.field-meta.xml
<CustomField>
    <fullName>Reporte_de_Gastos__c</fullName>
    <label>Reporte de Gastos</label>
    <referenceTo>Reporte_de_Gastos__c</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>