force-app/main/default/objects/Factura__c/fields/RUT__c.field-meta.xml
<CustomField>
    <fullName>RUT__c</fullName>
    <label>RUT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>