force-app/main/default/objects/Factura__c/validationRules/Monto_sin_impuesto_debe_ser_menor_total.validationRule-meta.xml
<ValidationRule>
    <fullName>Monto_sin_impuesto_debe_ser_menor_total</fullName>
    <active>true</active>
    <errorConditionFormula>Monto_Total__c &lt;=  Monto_Sin_Impuesto__c</errorConditionFormula>
    <errorDisplayField>Monto_Sin_Impuesto__c</errorDisplayField>
    <errorMessage>El monto sin impuesto debe ser menor al monto total</errorMessage>
</ValidationRule>